# SJTU_CLI

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
src/: cli.rs  config.rs  cookies.rs  error.rs  lib.rs  main.rs  output.rs
src/apps/: mod.rs
src/apps/canvas/: README.md  api.rs  auth.rs  http.rs  mod.rs  models.rs  tests_parse.rs  throttle.rs
src/apps/jwbmessage/: api.rs  api_write.rs  http.rs  mod.rs  models.rs  tests_parse.rs  tests_write.rs  throttle.rs
src/apps/shuiyuan/: api.rs  api_read.rs  api_write.rs  api_write_http.rs  http.rs  mod.rs  models.rs  render.rs  tests_read.rs  tests_write.rs  throttle.rs
src/auth/: browser_extract.rs  mod.rs  qr_login.rs  qr_render.rs
src/auth/cas/: client.rs  mod.rs  tests.rs
src/auth/oauth2/: client.rs  follow.rs  mod.rs  rookie.rs  tests.rs
src/cli/: canvas.rs  jwbmessage.rs  mod.rs  shuiyuan.rs  shuiyuan_args.rs
src/commands/: auth_cmds.rs  mod.rs
src/commands/canvas/: data.rs  handlers.rs  mod.rs
src/commands/jwbmessage/: data.rs  handlers_read.rs  handlers_write.rs  mod.rs
src/commands/shuiyuan/: data.rs  handlers_read.rs  handlers_write.rs  mod.rs
src/cookies/: io.rs  mod.rs  tests.rs
src/util/: confirm.rs  mod.rs
tasks/: isjtu_investigation.md  lessons.md  plan-next.md  s3b-jiaowoban-messages.md  s3c-canvas-planner.md  status-2026-04-23.md  todo.md
